# open-smart-desk-server

./: .editorconfig  .gitignore  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
client/: index.html  scripts.js
client/styles/: README.md  buttons.css  display.css  index.css  variables.css
conf/etc/nginx/modules-enabled/: default
conf/etc/nginx/sites-enabled/: default
conf/home/ubuntu/: .zshrc
server/: .eslintrc.js  .prettierrc.js  __main__.py  app.js  config.js  container.js  db.js  emitter.js  index.js  io.js  logger.js  models.js  package-lock.json  package.json  pir.js  relays.js  tsconfig.json  vl53l0x.js
server/config/: index.js
server/errors/: BaseError.js  InternalServerError.js  InvalidParameterError.js  index.js
server/helpers/: index.js
server/interfaces/db/: index.js
server/interfaces/http/: Server.js
server/interfaces/hw/: ldm.js  pir.js  relay.js
server/interfaces/socket/: io.js
server/repositories/: event.repository.js  index.js  memory.repository.js
server/repositories/models/: events.model.js  memory.model.js
server/services/: height.service.js  memory.service.js  presence.service.js
server/src/: app.ts  container.ts  emitter.ts  index.ts  logger.js
server/src/config/: index.ts
server/src/errors/: BaseError.ts  InternalServerError.ts  InvalidParameterError.ts  index.ts
server/src/helpers/: index.ts
server/src/interfaces/db/: index.ts
server/src/repositories/: event.repository.ts  index.ts  memory.repository.ts
server/src/services/: height.service.ts  memory.service.ts  presence.service.ts
(+8 files in other folders)
